# libcimbar-ios

./: .gitignore  CMakeLists.txt  README.md
docs/ios/: ios-app-macos-xcode-setup.md  opencv-ios-sdk-integration.md
docs/plans/: 2026-04-18-libcimbar-ios-receiver-implementation.md
docs/superpowers/specs/: 2026-04-18-libcimbar-ios-app-design.md
ios-app/: README.md  project.yml
ios-app/LibCimbarReceiver/App/: AppState.swift  LibCimbarReceiverApp.swift
ios-app/LibCimbarReceiver/Bridge/: CimbarDecoderBridge.h  CimbarDecoderBridge.mm  CimbarDecoderBridge.swift
ios-app/LibCimbarReceiver/Camera/: CameraCaptureService.swift
ios-app/LibCimbarReceiver/Components/: UnavailableStateView.swift
ios-app/LibCimbarReceiver/Features/Files/: ReceivedFilesView.swift
ios-app/LibCimbarReceiver/Features/Scan/: ScanView.swift  (+2 more)
ios-app/LibCimbarReceiver/Models/: ReceivedFile.swift  ScanState.swift
ios-app/LibCimbarReceiver/Resources/: Info.plist
ios-app/LibCimbarReceiver/Storage/: ReceivedFilesStore.swift
src/exe/cimbar_recv2/: CMakeLists.txt  recv2.cpp
src/lib/cimb_translator/: CimbDecoder.cpp  CimbDecoder.h  CimbReader.cpp  CimbReader.h
src/lib/compression/: zstd_header_check.h
src/lib/encoder/: Decoder.h
src/lib/extractor/: Extractor.h
src/lib/fountain/: fountain_decoder_sink.h
src/lib/ios_recv/: CMakeLists.txt  CimbarReceiveSession.cpp  CimbarReceiveSession.h  CimbarReceiveTypes.h  cimbar_ios_recv_c.cpp  cimbar_ios_recv_c.h
src/lib/ios_recv/test/: CMakeLists.txt  CimbarReceiveSessionTest.cpp  test.cpp
src/third_party_lib/wirehair/: gf256.cpp  gf256.h
(+2 files in other folders)
